💨👓 Checkpoint ./site/html/home.ejs:21460814/4818 ./site/html/ek/header.ejs:21460814/12

--- a/site/html/ek/header.ejs
+++ b/site/html/ek/header.ejs
@@ -32,6 +32,7 @@
 		<meta property="og:image" content="https://cdn.discordapp.com/attachments/723279024050405427/740937064371060877/k.png">
 		<meta property="theme-color" content="#2c2f33">
 	<meta charset="utf-8">
+  
 <link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/lf/Login_v5/vendor/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/lf/Login_v5/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/lf/Login_v5/fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
@@ -49,3 +50,4 @@
 } 
   </style>
 </head>
+  <body>
