🚖🏐 Checkpoint ./site/html/home.ejs:21460814/262

--- a/site/html/home.ejs
+++ b/site/html/home.ejs
@@ -13,7 +13,6 @@
 <link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/lf/Login_v5/css/main.css">
   
 <body>
-  
           <!--   <div class="js">
     <div id="preloader"></div>
       <div>
@@ -73,11 +72,13 @@
 <!-- end background code-->
 <div class="wrap-login100 p-l-110 p-r-110 p-t-62 p-b-33">
 <form class="login100-form validate-form flex-sb flex-w">
-<span class="login-form-title p-b-53">Login to Continue</span>  
+ <!-- <p class="login-form-title p-b-53">GePanel | Awesome ! </p>
+  <br>
+<p class="login-form-title p-b-53">Login to Continue</p>  
 <a href="/giris" class="btn-discord m-b-20" style="color:white">
-<img src="https://discord.com/assets/28174a34e77bb5e5310ced9f95cb480b.png" alt="">
+<img src="https://img.favpng.com/9/14/3/discord-social-media-computer-icons-png-favpng-J4Dq15J77us55NAHPFkPKQk6x_t.jpg" alt="">
 Discord
-</a>
+</a>-->
   </div>
   </div>
   </div>
