🛳👹 Checkpoint ./site/html/home.ejs:21460814/2181 ./site/html/ek/header.ejs:21460814/12 ./server.js:21460814/85

--- a/site/html/home.ejs
+++ b/site/html/home.ejs
@@ -1,17 +1,17 @@
 <%- include('ek/header') %>
-<meta property="theme-color" content="#2c2f33">
-<!--
-<link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/lf/Login_v5/vendor/bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/lf/Login_v5/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/lf/Login_v5/fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
-<link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/lf/Login_v5/vendor/animate/animate.css">
-<link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/lf/Login_v5/vendor/css-hamburgers/hamburgers.min.css">
-<link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/lf/Login_v5/vendor/animsition/css/animsition.min.css">
-<link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/lf/Login_v5/vendor/select2/select2.min.css">
-<link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/lf/Login_v5/vendor/daterangepicker/daterangepicker.css">
-<link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/lf/Login_v5/css/util.css">
-<link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/lf/Login_v5/css/main.css">
-  -->
+
+<!-- GePanel 
+
+Coded By Kardespro
+
+* https://github.com/kardespro
+* kardespro.cf
+
+
+
+
+-->
+<meta property="theme-color" content="green">
 <body>
           <!--   <div class="js">
     <div id="preloader"></div>
@@ -206,6 +206,10 @@ body {
             border-radius: 3px;
           }
     </style>
+  <br><br><br><br><br><br>
+  <p> GePanel | Awesome ! </p>
+  <br><br><br>
+  <br>
   .c
 .c-c
   .c-e
@@ -214,8 +218,8 @@ body {
   <div class="container">
 <div class="row middle-on-small center-on-small">
   <div class="column small-12 medium-6 large-4">
-    <a href="#!" class="c-button c-button--gooey">
-      login discord
+    <a href="/giris" class="c-button c-button--gooey">
+      Giriş Yap
       <div class="c-button__blobs">
         <div></div>
         <div></div>
