--- a/site/html/ek/header.ejs
+++ b/site/html/ek/header.ejs
@@ -30,7 +30,7 @@
 		<meta property="og:title" content="GePanel">
 		<meta property="og:description" content="GePanel">
 		<meta property="og:image" content="https://cdn.discordapp.com/attachments/723279024050405427/740937064371060877/k.png">
-		<meta property="theme-color" content="#2c2f33">
+		<meta property="theme-color" content="green">
 	<meta charset="utf-8">
   
 <link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/lf/Login_v5/vendor/bootstrap/css/bootstrap.min.css">
