--- a/site/html/anasayfa.ejs
+++ b/site/html/anasayfa.ejs
@@ -11,6 +11,10 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <link rel="stylesheet" href="@sweetalert2/themes/dark/dark.css">
 <script src="sweetalert2/dist/sweetalert2.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 <title>
   Merhaba, GePanel 'e Hoş Geldin 
@@ -47,6 +51,24 @@ Toast.fire({
     }
   </style>
   <p></p>
+  
+  
+  <div class="row">
+    <div class="col s12 m5">
+      <div class="card-panel teal">
+        <span class="white-text">Bot Pingi
+        <% if(!w.ws.ping < 20){ %>
+          <p>Botumuz <%= w.ws.ping %> Düşük Ping Ile Size Hizmet Veriyor </p>
+          <% } %>
+          <% if(!w.ws.ping > 20){ %>
+          
+          <p>Botumuz <%= w.ws.ping %> Ile Hizmet Veriyor</p>
+          
+          <% } %>
+        </span>
+      </div>
+    </div>
+  </div>
   
   
   
