🤑⭐️ Checkpoint ./server.js:21460814/10 ./site/html/error/auth.ejs:21460814/20 ./site/html/anasayfa.ejs:21460814/3932

--- a/site/html/anasayfa.ejs
+++ b/site/html/anasayfa.ejs
@@ -45,6 +45,62 @@ Toast.fire({
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #23272A">
+<a class="navbar-brand" href="/"><img src="https://cdn.discordapp.com/attachments/715886415296069652/759848282422771732/New_Project_63_7E2F688.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
+<a type="button" class="icon collapsed" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-label="Toggle navigation" aria-expanded="true">
+<i class="fas fa-bars"></i>
+</a>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="navbar-nav mr-auto">
+<li class="nav-item">
+<a class="nav-link" href="/">Anasayfa</a>
+</li>
+<li class="nav-item dropdown">
+<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+Kodlar
+</a>
+<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+<a class="dropdown-item" href="/kategori/js">JavaScript</a>
+<a class="dropdown-item" href="/kategori/html">HTML</a>
+<a class="dropdown-item" href="/kategori/py">PY</a>
+<a class="dropdown-item" href="/kategori/diger">Diğer</a>
+</div>
+</li>
+<li class="nav-item dropdown">
+<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+Özel Kodlar
+</a>
+<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+<a class="dropdown-item javascriptplus" href="/kategori/js+">JavaScript+</a>
+<a class="dropdown-item altyapi" href="/kategori/altyapi">Altyapılar</a>
+<a class="dropdown-item rainbow" href="/kategori/booster">Booster</a>
+</div>
+</li>
+<li class="nav-item dropdown">
+<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+Ek
+</a>
+<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+<a class="dropdown-item" href="/yetkililer">Yetkililer</a>
+<a class="dropdown-item" href="/sss">S.S.S.</a>
+<a class="dropdown-item" href="/v11tov12">v11-v12 Kod Dönüştür</a>
+<a class="dropdown-item" href="/v12tov11">v12-v11 Kod Dönüştür</a>
+<a class="dropdown-item" href="/uptime">Uptime Servisi</a>
+</div>
+</li>
+</ul>
+<div class="container-fluid">
+<ul class="nav navbar-nav flex-nowrap ml-auto">
+<li class="nav-item active">
+<a class="nav-link active" style="color: #039659" href="/giris"><i class="fas fa-sign-in-alt"></i> Giriş Yap</a>
+</li>
+
+</ul>
+</div>
+</div>
+</nav>
+<br>
+</div>
   <style>
   body{
     background:green;
@@ -69,6 +125,15 @@ Toast.fire({
       </div>
     </div>
   </div>
+  <div class="row"> 
+    <div class="col s12 m5">
+      <div class="card-panel teal"> 
+        <span class="white-text">Botu Kullanan Sunucu Sayi 
+          <%= guildsize %>
+        </span> 
+      </div> 
+    </div>
+  </div>
   
   
   
@@ -76,3 +141,8 @@ Toast.fire({
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js" type="dd56915baf4e36e07b636606-text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js" type="dd56915baf4e36e07b636606-text/javascript"></script>
+<!--<<script" type="dd56915baf4e36e07b636606-text/javascript"></script>
+--><script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="dd56915baf4e36e07b636606-|49" defer=""></script></body>
+</html>
