📫🙆 Checkpoint ./site/html/ayarlar/fakesistem.ejs:21460814/7135 ./site/html/anasayfa.ejs:21460814/204 ./site/html/home.ejs:21460814/19

--- a/site/html/home.ejs
+++ b/site/html/home.ejs
@@ -325,6 +325,7 @@ Toast.fire({
 }
 
   </style>
+  <script></
   <!--
   <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap" rel="stylesheet">
