--- a/site/html/home.ejs
+++ b/site/html/home.ejs
@@ -325,7 +325,9 @@ Toast.fire({
 }
 
   </style>
-  <script></
+  <script>
+  console.log("Hemen Kapat Burayi ! ");
+  </script>
   <!--
   <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap" rel="stylesheet">
