👛🐉 Checkpoint ./site/html/home.ejs:21460814/958 ./site/html/ayarlar/fakesistem.ejs:21460814/38676

--- a/site/html/home.ejs
+++ b/site/html/home.ejs
@@ -70,7 +70,7 @@ a:hover, button:hover {
 
 .hero-section {
   background-color: #04223E;
-  background-image: url("https://img.onl/h6GGjR");
+  background-image: url("https://doc-00-58-docs.googleusercontent.com/docs/securesc/s79cbgdrq4j2ajrkmskp2os9be4csa5n/a2rm7j2bvebl78i48brqfomqf0qq9dnq/1617646575000/06001473034555033695/08685391717243585029/1cHBKBxFzXx4UR-T3VOWkTehNDLwdm7I3?e=view&authuser=0&nonce=dajknvrhdv1fq&user=08685391717243585029&hash=iu1fu2f5hjbk2ofm8tvhgq0gg4lfsp0t");
   background-repeat: no-repeat;
   background-size: cover;
   padding: 16.8em 0 14.8em 0;
@@ -146,7 +146,7 @@ a:hover, button:hover {
 
 .feutures-section {
   padding: 85px 60px;
-  background-image: url("/img/wave.png");
+  background-image: url("https://doc-10-58-docs.googleusercontent.com/docs/securesc/s79cbgdrq4j2ajrkmskp2os9be4csa5n/tk8f8tvik7ro494dhoaibv6ggpfbkshd/1617646800000/06001473034555033695/08685391717243585029/1TsKIrZlVZ77aD3PIkOb2FYmoprRRJruS?e=view&authuser=0");
   background-repeat: no-repeat;
   background-position-x: right;
   background-position-y: bottom;
@@ -270,7 +270,7 @@ a:hover, button:hover {
         <h3 class="card-title">
           [GePanel] fast as a Bunny
         </h3>
-        <img class="card-image" src="/img/rabbit.png" width="200">
+        <img class="card-image" src="https://doc-04-58-docs.googleusercontent.com/docs/securesc/s79cbgdrq4j2ajrkmskp2os9be4csa5n/butgdsur6blc5jl6a5fqbjtgg5lqa1gu/1617646950000/06001473034555033695/08685391717243585029/1kCuAiA9rlpgjYoIBrjL2lZHQGuRZfUUw?e=view&authuser=0&nonce=buvprcutn2nmc&user=08685391717243585029&hash=51921mqb0tomg87v4sk3s5se78e3u1ci" width="200">
         <p class="card-description">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
         </p>
