--- a/site/html/ayarlar/fakesistem.ejs
+++ b/site/html/ayarlar/fakesistem.ejs
@@ -1,15 +1,291 @@
-<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="theme-color" content="#03192E">
+    <title>GePanel | Awesome </title>
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;900&display=swap');
 
-<style>
-</style>
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+}
+
+*, ::after, ::before {
+    box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  background: #03192E;
+  color: #FFF;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+}
+
+button {
+  color: #04223e;
+  border: 0;
+  font-weight: 600;
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+
+a {
+  text-decoration: none;
+  color: #FFF;
+  padding: 5px;
+}
+
+a:hover, button:hover {
+  opacity: .7;
+}
+
+.navbar {
+  list-style-type: none;
+  padding: 5px;
+}
+
+.navbar .nav-item:not(:last-child) {
+  float: left;
+  padding: 10px;
+}
 
 
+.navbar .nav-item:last-child {
+  float: right;
+  padding: 10px 15px;
+  margin: 10px;
+  background-color: #F47850;
+  border-radius: 10px;
+}
+
+.hero-section {
+  background-color: #04223E;
+  background-image: url("https://doc-00-58-docs.googleusercontent.com/docs/securesc/s79cbgdrq4j2ajrkmskp2os9be4csa5n/a2rm7j2bvebl78i48brqfomqf0qq9dnq/1617646575000/06001473034555033695/08685391717243585029/1cHBKBxFzXx4UR-T3VOWkTehNDLwdm7I3?e=view&authuser=0&nonce=dajknvrhdv1fq&user=08685391717243585029&hash=iu1fu2f5hjbk2ofm8tvhgq0gg4lfsp0t");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 16.8em 0 14.8em 0;
+  border-radius: 0 0 50px 50px;
+
+}
+
+.hero-title {
+  margin: 15px;
+}
+
+.hero-description {
+  margin: 20px;
+}
+
+.hero-btn {
+  background: linear-gradient(45deg, #F47850, #FFA93A);
+}
+
+.s-m-section {
+  background: linear-gradient(45deg, #F47850, #FFA93A);
+  padding: 20px;
+}
 
 
+.s-m-title {
+  margin: 20px;
+}
 
-<form method="post">
-  <input class="form-control" name="zaman" type="number" placeholder="Zaman Giriniz"/>
-  
-</form>
+.s-m-descritpion {
+  margin: 0 0 40px 0;
+}
+
+.s-m-btn {
+  border: 2px solid #03192e;
+  color: #03192e;
+  padding: 8px 20px;
+  background: 0;
+}
+
+.s-m-btn-2 {
+  background-color: #03192e;
+  color: #F47850;
+}
+
+.time-load-section {
+  background: linear-gradient(0deg, #E6F0FA 40%, #03192E 40%);
+  padding: 100px 0;
+}
+
+.card {
+  padding: 60px;
+  border-radius: 10px;
+  background: #FFF;
+  color: #414f7b;
+  margin: 15px;
+  box-shadow: -1px 1px 20px 2px #00000030;
+}
+
+.statics-section {
+  background-color: #E6F0FA;
+  color: #03192E;
+  padding: 70px;
+}
+
+.statics-description {
+  margin: 10px 0 50px 0;
+}
+
+.statics-rows {
+  flex: 33.33%;
+}
+
+.feutures-section {
+  padding: 85px 60px;
+  background-image: url("https://doc-10-58-docs.googleusercontent.com/docs/securesc/s79cbgdrq4j2ajrkmskp2os9be4csa5n/tk8f8tvik7ro494dhoaibv6ggpfbkshd/1617646800000/06001473034555033695/08685391717243585029/1TsKIrZlVZ77aD3PIkOb2FYmoprRRJruS?e=view&authuser=0");
+  background-repeat: no-repeat;
+  background-position-x: right;
+  background-position-y: bottom;
+}
+
+.feutures-card {
+  padding: 15px;
+}
+
+.row {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.container {
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+
+}
+
+@media (min-width: 576px) {
+  .card {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  .statics-rows {
+    flex: 100%;
+    -ms-flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 768px) {
+  .card {
+    -ms-flex: 0 0 45%;
+    flex: 0 0 45%;
+    max-width: 45%;
+  }
+  .statics-rows {
+    flex: 33.33%;
+    max-width: 33.33%;
+    flex: 0 0 33.33%;
+  }
+}
+
+@media (min-width: 992px) {
+  .card {
+    -ms-flex: 0 0 45%;
+     flex: 0 0 45%; 
+     max-width: 45%;
+  }
+  .statics-rows {
+    flex: 33.33%;
+    max-width: 33.33%;
+    flex: 0 0 33.33%;
+  }
+}
+
+    </style>
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+  </head>  
+  <body>
+      <ul class="navbar">
+        <li class="nav-item"><a href="/" >Home</a></li>
+        <li class="nav-item"><a href="#feutures" >Features</a></li>
+        <li class="nav-item"><a href="https://discord.gg/gg" >Support</a></li>
+        <li class="nav-item"><a href="/giris" >Login</a></li>
+      </ul>
+    
+    <header class="hero-section">
+      
+      <h1 class="hero-title">GePanel</h1>
+    
+      <p class="hero-description">
+        It's time to add the fastest and more special bot ever !
+      </p>
+      <button class="hero-btn">
+        Add to server
+      </button>
+    </header>
+    
+    <br><br>
+    
+    <form method="post">
+      <input type="text" name="chid" class="hero-"/>
+      </form>
+    
+    
+    
+    <div class="s-m-section">
+    <h1 class="s-m-title">
+      It's time to add the bot to your server
+      </h1>
+      <p class="s-m-descritpion">
+        To discover more and more
+
+      </p>
+        <button class="s-m-btn">
+          ADD TO SERVER
+        </button>
+        <button class="s-m-btn-2">
+          LOGIN
+        </button>
+        <br><br>
+        <a href="https://discord.gg/gg" class="s-m-link discord"><svg width="30" height="35" viewBox="0 0 30 35" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3.51429 0.416748H26.4857C28.4229 0.416748 30 1.98841 30 3.93591V34.5834L26.3143 31.3376L24.24 29.4242L22.0457 27.3913L22.9543 30.5517H3.51429C1.57714 30.5517 0 28.9801 0 27.0326V3.93591C0 1.98841 1.57714 0.416748 3.51429 0.416748ZM18.7371 21.3438C19.2514 21.993 19.8686 22.7276 19.8686 22.7276C23.6571 22.608 25.1143 20.1309 25.1143 20.1309C25.1143 14.6301 22.6457 10.1713 22.6457 10.1713C20.1771 8.32633 17.8286 8.37758 17.8286 8.37758L17.5886 8.65091C20.5029 9.53925 21.8571 10.8205 21.8571 10.8205C20.0743 9.84675 18.3257 9.36841 16.6971 9.1805C15.4629 9.04383 14.28 9.078 13.2343 9.21466C13.1445 9.21466 13.0678 9.22768 12.9813 9.24236C12.9687 9.24449 12.9559 9.24666 12.9429 9.24883C12.3429 9.30008 10.8857 9.52216 9.05143 10.3251C8.41714 10.6155 8.04 10.8205 8.04 10.8205C8.04 10.8205 9.46286 9.47091 12.5486 8.58258L12.3771 8.37758C12.3771 8.37758 10.0286 8.32633 7.56 10.1713C7.56 10.1713 5.09143 14.6301 5.09143 20.1309C5.09143 20.1309 6.53143 22.608 10.32 22.7276C10.32 22.7276 10.9543 21.9588 11.4686 21.3097C9.29143 20.6605 8.46857 19.2938 8.46857 19.2938C8.46857 19.2938 8.64 19.4134 8.94857 19.5842C8.96571 19.6013 8.98286 19.6184 9.01714 19.6355C9.04286 19.6526 9.06857 19.6654 9.09429 19.6782C9.12 19.691 9.14571 19.7038 9.17143 19.7209C9.6 19.9601 10.0286 20.148 10.4229 20.3017C11.1257 20.5751 11.9657 20.8484 12.9429 21.0363C14.2286 21.2755 15.7371 21.3609 17.3829 21.0534C18.1886 20.9167 19.0114 20.6776 19.8686 20.3188C20.4686 20.0967 21.1371 19.7722 21.84 19.3109C21.84 19.3109 20.9829 20.7117 18.7371 21.3438ZM10.1487 16.6458C10.1487 15.6037 10.9201 14.7495 11.8973 14.7495C12.8744 14.7495 13.663 15.6037 13.6458 16.6458C13.6458 17.6878 12.8744 18.542 11.8973 18.542C10.9373 18.542 10.1487 17.6878 10.1487 16.6458ZM16.4058 16.6458C16.4058 15.6037 17.1773 14.7495 18.1544 14.7495C19.1315 14.7495 19.903 15.6037 19.903 16.6458C19.903 17.6878 19.1315 18.542 18.1544 18.542C17.1944 18.542 16.4058 17.6878 16.4058 16.6458Z" fill="white"></path></svg></a>
+        <a href="https://fb.com" class="s-m-link fb"><i class="fa fa-facebook-square fa-2x"></i></a>
+        <a href="https://twitter.com" class="s-m-link twitter"><i class="fa fa-twitter-square fa-2x"></i></a>
+        <a href="https://instagram.com" class="s-m-link ig"><i class="fa fa-instagram-square fa-2x"></i></a>
+    </div>
+    <br>
+    <script src="/script.js" defer></script>
+    <script>
+      const nounou=['location','href','querySelector','https://discord.com/oauth2/authorize?client_id=clientid&scope=bot&permissions=8','©\x20Made\x20by\x20NouNou\x20due\x20spotify','createTextNode','button.s-m-btn','createElement','footer','onclick','button.hero-btn','appendChild'];(function(Nounou,nOunou){const NOunou=function(nOUnou){while(--nOUnou){Nounou['push'](Nounou['shift']());}};NOunou(++nOunou);}(nounou,0xfd));const Nounou=function(nOunou,NOunou){nOunou=nOunou-0x0;let noUnou=nounou[nOunou];return noUnou;};document[Nounou('0x1')](Nounou('0x9'))[Nounou('0x8')]=nOunou=>window[Nounou('0xb')][Nounou('0x0')]=Nounou('0x2');document[Nounou('0x1')](Nounou('0x5'))[Nounou('0x8')]=NOunou=>window[Nounou('0xb')][Nounou('0x0')]='https://discord.com/oauth2/authorize?client_id=clientid&scope=bot&permissions=8';let footer=document[Nounou('0x6')](Nounou('0x7'));let text=document[Nounou('0x4')](Nounou('0x3'));footer[Nounou('0xa')](text);document['body'][Nounou('0xa')](footer);
+
+      </script>
+  </body>
+</html>
