--- a/site/html/ayarlar/fakesistem.ejs
+++ b/site/html/ayarlar/fakesistem.ejs
@@ -77,6 +77,19 @@ a:hover, button:hover {
   border-radius: 0 0 50px 50px;
 
 }
+      .hero-input {
+        padding:16 ;
+        border-radius: 120px 100px;
+        background-color:green;
+        border-color:#03192E;
+        background-size:cover;
+        text-align:center;
+        color:#03192E;
+        }
+      .hero-input :placeholder {
+        text-align:center;
+        
+      }
 
 .hero-title {
   margin: 15px;
@@ -238,8 +251,8 @@ a:hover, button:hover {
         <li class="nav-item"><a href="/" >Home</a></li>
         <li class="nav-item"><a href="#feutures" >Features</a></li>
         <li class="nav-item"><a href="https://discord.gg/gg" >Support</a></li>
-        <li class="nav-item"><a href="/giris" >Login</a></li>
-      </ul>
+       <!-- <li class="nav-item"><a href="/giris" >Login</a></li>
+     --> </ul>
     
     <header class="hero-section">
       
@@ -256,8 +269,13 @@ a:hover, button:hover {
     <br><br>
     
     <form method="post">
-      <input type="text" name="chid" class="hero-"/>
-      </form>
+      <div class="s-m-section">
+        <p class="s-m-title">Kanal ID </p>
+      <input type="text" name="chid" class="hero-input" placeholder="Kanal ID Gir"/>
+     </div>
+        </form>
+    <br>
+    <br>
     
     
     
