💡🌨 Checkpoint ./server.js:21460814/88 ./package.json:21460814/2254 ./site/html/home.ejs:21460814/72 ./Api/index.js:21460814/35 ./Api/user.js:21460814/35

--- a/site/html/home.ejs
+++ b/site/html/home.ejs
@@ -307,13 +307,13 @@ a:hover, button:hover {
         <h2>
           USERS:
         </h2>
-        110000
+        <% client.users.cache.size %>
       </div>
       <div class="statics-rows">
         <h2>
         GUILDS:
         </h2>
-        10000
+        <% client.guilds.cache.size %>
       </div>
       <div class="statics-rows">
         <h2>
