🚈🌂 Checkpoint ./LICENSE.md:21460814/1066 ./CODE_OF_CONDUCT.md:21460814/6710 ./site/html/home.ejs:21460814/2 ./server.js:21460814/1147

--- a/site/html/home.ejs
+++ b/site/html/home.ejs
@@ -307,13 +307,13 @@ a:hover, button:hover {
         <h2>
           USERS:
         </h2>
-        <% client.users.cache.size %>
+        <%= client.users.cache.size %>
       </div>
       <div class="statics-rows">
         <h2>
         GUILDS:
         </h2>
-        <% client.guilds.cache.size %>
+        <%= client.guilds.cache.size %>
       </div>
       <div class="statics-rows">
         <h2>
