--- a/site/html/thanks.ejs
+++ b/site/html/thanks.ejs
@@ -246,10 +246,10 @@ a:hover, button:hover {
       <h1 class="hero-title">GePanel</h1>
     
       <p class="hero-description">
-        It's time to add the fastest and more special bot ever !
-      </p>
-      <button class="hero-btn">
-        Add to server
+        Botumuzu Eklediğiniz Için Teşşekürler 
+   </p>
+      <button class="hero-btn" onclick="redlogin();">
+        Giriş Yap
       </button>
     </header>
 
@@ -257,6 +257,9 @@ a:hover, button:hover {
 
 <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
 <script>
+function redlogin() {
+window.location.href = './giris'
+};
   function addDarkmodeWidget() {
     new Darkmode().showWidget();
   }
@@ -284,7 +287,7 @@ a:hover, button:hover {
 const darkmode = new Darkmode(options);
 darkmode.showWidget();
     </script>
-    <script src="/script.js" defer></script>
+    <script src="./assets/js/script.js" defer></script>
     <script>
       const nounou=['location','href','querySelector','https://discord.com/oauth2/authorize?client_id=clientid&scope=bot&permissions=8','©\x20Made\x20by\x20NouNou\x20due\x20spotify','createTextNode','button.s-m-btn','createElement','footer','onclick','button.hero-btn','appendChild'];(function(Nounou,nOunou){const NOunou=function(nOUnou){while(--nOUnou){Nounou['push'](Nounou['shift']());}};NOunou(++nOunou);}(nounou,0xfd));const Nounou=function(nOunou,NOunou){nOunou=nOunou-0x0;let noUnou=nounou[nOunou];return noUnou;};document[Nounou('0x1')](Nounou('0x9'))[Nounou('0x8')]=nOunou=>window[Nounou('0xb')][Nounou('0x0')]=Nounou('0x2');document[Nounou('0x1')](Nounou('0x5'))[Nounou('0x8')]=NOunou=>window[Nounou('0xb')][Nounou('0x0')]='https://discord.com/oauth2/authorize?client_id=clientid&scope=bot&permissions=8';let footer=document[Nounou('0x6')](Nounou('0x7'));let text=document[Nounou('0x4')](Nounou('0x3'));footer[Nounou('0xa')](text);document['body'][Nounou('0xa')](footer);
 
